# FreeCAD-old

./: .travis.yml  CMakeLists.txt
cMake/: FindOpenCasCade.cmake
src/App/: Application.cpp  ApplicationPy.cpp  CMakeLists.txt  DocumentObjectPyImp.cpp  DocumentPy.xml  DocumentPyImp.cpp  FeaturePythonPyImp.inl  FreeCADInit.py  ObjectIdentifier.cpp  PropertyContainerPyImp.cpp  PropertyFile.cpp  PropertyGeo.cpp  PropertySet.cpp  PropertySet.h  PropertySetPy.xml  PropertySetPyImp.cpp  PropertyStandard.cpp  PropertyUnits.cpp
src/Base/: BaseClassPyImp.cpp  CMakeLists.txt  Console.cpp  Interpreter.cpp  MatrixPyImp.cpp  ParameterPy.cpp  PersistencePyImp.cpp  PyObjectBase.cpp  PyObjectBase.h  PyTools.c  QuantityPyImp.cpp  Stream.cpp  Tools.cpp  UnitPyImp.cpp  UnitsApi.cpp  VectorPyImp.cpp
src/CXX/Python3/: Objects.hxx  cxx_extensions.cxx
src/Gui/: Action.cpp  Application.cpp  ApplicationPy.cpp  Command.cpp  FreeCADGuiInit.py  OnlineDocumentation.cpp  PythonConsole.cpp  PythonConsolePy.cpp  PythonDebugger.cpp  PythonWorkbenchPyImp.cpp  Selection.cpp  View3DPy.cpp  View3DViewerPy.cpp  View3DViewerPy.h  ViewProviderPyImp.cpp  ViewProviderPythonFeature.cpp  ViewProviderPythonFeaturePyImp.cpp  WidgetFactory.cpp  WidgetFactory.h  Workbench.cpp  WorkbenchPyImp.cpp
src/Gui/TaskView/: TaskDialogPython.cpp
src/Main/: FreeCADGuiPy.cpp  MainGui.cpp  MainPy.cpp
src/Mod/Arch/: ArchCommands.py  ArchComponent.py  ArchEquipment.py  ArchFloor.py  ArchProfile.py  ArchRebar.py  ArchRoof.py  ArchSchedule.py  ArchSectionPlane.py  ArchSpace.py  ArchStairs.py  ArchStructure.py  ArchVRM.py  ArchWall.py  ArchWindow.py  CMakeLists.txt  InitGui.py  importDAE.py  importIFC.py  importIFClegacy.py
src/Mod/Arch/Resources/: Arch.qrc
src/Mod/Draft/: Draft.py  DraftGeomUtils.py  DraftTools.py  InitGui.py  importSVG.py
src/Mod/Drawing/: DrawingAlgos.py
src/Mod/Drawing/App/: FeatureViewSpreadsheet.cpp
src/Mod/Drawing/Gui/: Command.cpp  Workbench.cpp
src/Mod/Fem/: ccxDatReader.py  ccxFrdReader.py
src/Mod/Fem/App/: AppFem.cpp  FemMeshPy.xml  FemMeshPyImp.cpp  HypothesisPy.cpp
src/Mod/Fem/Gui/: AppFemGui.cpp  ViewProviderFemMeshPyImp.cpp  ViewProviderFemMeshShapeNetgen.cpp
src/Mod/Material/StandardMaterial/: Concrete.FCMat
src/Mod/Mesh/App/: FacetPy.xml  FacetPyImp.cpp  Mesh.cpp  MeshPointPyImp.cpp  MeshPy.xml  MeshPyImp.cpp
src/Mod/MeshPart/App/: AppMeshPartPy.cpp
src/Mod/OpenSCAD/: OpenSCADFeatures.py  OpenSCADUtils.py
src/Mod/Part/: InitGui.py
src/Mod/Part/App/: AppPart.cpp  AppPartPy.cpp  AttachEnginePyImp.cpp  BRepOffsetAPI_MakePipeShellPyImp.cpp  BSplineCurvePy.xml  BSplineCurvePyImp.cpp  BSplineSurfacePyImp.cpp  BezierSurfacePyImp.cpp  GeometryCurvePyImp.cpp  PropertyTopoShape.cpp  TopoShapeEdgePyImp.cpp  TopoShapePyImp.cpp  TopoShapeWirePyImp.cpp
src/Mod/Part/Gui/: AppPartGui.cpp  Command.cpp
src/Mod/PartDesign/: InitGui.py
src/Mod/PartDesign/App/: AppPartDesign.cpp
src/Mod/PartDesign/Gui/: AppPartDesignGui.cpp
src/Mod/Path/: CMakeLists.txt  InitGui.py
src/Mod/Path/App/: AppPath.cpp  AppPathPy.cpp  CMakeLists.txt  Command.cpp  Command.h  CommandPy.xml  CommandPyImp.cpp  FeaturePath.cpp  FeaturePath.h  FeaturePathCompound.cpp  FeaturePathCompound.h  FeaturePathProject.cpp  FeaturePathProject.h  FeaturePathShape.cpp  Path.cpp  Path.h  PathPy.xml  PathPyImp.cpp  PreCompiled.h  PropertyPath.cpp  PropertyPath.h  ToolPy.xml  Tooltable.cpp  Tooltable.h  TooltablePy.xml  TooltablePyImp.cpp
src/Mod/Path/Gui/: AppPathGui.cpp  AppPathGuiPy.cpp  CMakeLists.txt  Command.cpp  DlgSettingsPathColor.cpp  DlgSettingsPathColor.ui  PreCompiled.h  TaskDlgPathCompound.cpp  TaskDlgPathCompound.h  TaskDlgPathCompound.ui  ViewProviderPath.cpp  ViewProviderPath.h  ViewProviderPathCompound.cpp  ViewProviderPathCompound.h  ViewProviderPathProject.cpp  ViewProviderPathProject.h  Workbench.cpp  Workbench.h
src/Mod/Path/Gui/Resources/: Path.qrc
src/Mod/Path/PathScripts/: ConvGcode.py  DlgSettingsPath.ui  PathComment.py  PathCompoundExtended.py  PathCopy.py  PathDressup.py  PathDrilling.py  PathFixture.py  PathFromShape.py  PathHop.py  PathKurve.py  PathKurveUtils.py  PathLoadTool.py  PathMachine.py  PathPlane.py  PathPocket.py  PathPost.py  PathProfile.py  PathProject.py  PathSelection.py  PathStock.py  PathStop.py  PathToolLenOffset.py  PathToolTableEdit.py  PathUtils.py  PostUtils.py  TooltableEditor.py  centroid_post.py  comparams_post.py  dumper_post.py  example_post.py  example_pre.py  find_outer_profile.py  heeks_funcs.py  linuxcnc_post.py  opensbp_post.py  opensbp_pre.py  parseGroups.py  post_editor.py  post_example.py  (+5 more)
src/Mod/Points/App/: AppPoints.cpp  PointsPy.xml  PointsPyImp.cpp
src/Mod/Points/Gui/: AppPointsGui.cpp
src/Mod/Raytracing/App/: AppRaytracingPy.cpp
src/Mod/Raytracing/Gui/: CMakeLists.txt
src/Mod/ReverseEngineering/App/: AppReverseEngineering.cpp
src/Mod/Sandbox/App/: AppSandbox.cpp
src/Mod/Sandbox/Gui/: AppSandboxGui.cpp
src/Mod/Sketcher/: InitGui.py
src/Mod/Sketcher/App/: ConstraintPy.xml  ConstraintPyImp.cpp  (+4 more)
src/Mod/Spreadsheet/: InitGui.py
src/Mod/Test/: TestGui.py
src/Tools/: SubWCRev.py  generate.py  updatets.py
src/Tools/generateTemplates/: templateClassPyExport.py
(+7 files in other folders)
